--- a/content/templates/content/index.html
+++ b/content/templates/content/index.html
@@ -6,9 +6,12 @@
 
 <!--your title block here-->
 {% block title %}
-{% translate "Public Joint Stock Company 'Nikopol Pipeline Fittings Plant' (Nikopol foundry and mechanical plant 'Bolshevik')" %}
+ООО «М-ЛИТ»
 {% endblock title %}
 <!--title end-->
+{% block description %}
+Производство трубопроводной арматуры и запасных частей для подвижного состава
+{% endblock description %}
 
 
 <!--HEADER -> BASE.HTML-->
