--- a/content/templates/content/product_piping.html
+++ b/content/templates/content/product_piping.html
@@ -6,10 +6,12 @@
 
 <!--your title block here-->
 {% block title %}
-{% translate "Public Joint Stock Company 'Nikopol Pipeline Fittings Plant' (Nikopol foundry and mechanical plant 'Bolshevik')" %}
+Трубопроводная арматура
 {% endblock title %}
 <!--title end-->
-
+{% block description %}
+Задвижки параллельные, двухдисковые. Затворы обратные поворотные фланцевые, безфланцевые чугунные. Вантузы аэрационные
+{% endblock description %}
 
 <!--HEADER -> BASE.HTML-->
 
