--- a/content/templates/content/product_iron_casting.html
+++ b/content/templates/content/product_iron_casting.html
@@ -6,9 +6,12 @@
 
 <!--your title block here-->
 {% block title %}
-{% translate "Public Joint Stock Company 'Nikopol Pipeline Fittings Plant' (Nikopol foundry and mechanical plant 'Bolshevik')" %}
+Чугунное литьё
 {% endblock title %}
 <!--title end-->
+{% block description %}
+Люк лёгкий, люк средний, люк тяжелый, люк антивандальный, дождеприемник, решетка ливневая, скамейки
+{% endblock description %}
 
 
 <!--HEADER -> BASE.HTML-->
