--- a/content/templates/content/product_rw.html
+++ b/content/templates/content/product_rw.html
@@ -6,10 +6,12 @@
 
 <!--your title block here-->
 {% block title %}
-{% translate "Public Joint Stock Company 'Nikopol Pipeline Fittings Plant' (Nikopol foundry and mechanical plant 'Bolshevik')" %}
+Железнодорожная продукция
 {% endblock title %}
 <!--title end-->
-
+{% block description %}
+Клин фрикционный, тормозные колодки типа М, С, Ф, анкера закладные
+{% endblock description %}
 
 <!--HEADER -> BASE.HTML-->
 
