--- a/content/templates/content/index.html
+++ b/content/templates/content/index.html
@@ -486,60 +486,66 @@
         <span>Наши</span>
         <u class="text-primary">Клиенты</u>
     </h2>
-    <div class="row gx-lg-5">
+    <div class="row gx-lg-5 gy-4">
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/nzf-logo.png' %}"
-                 class="rounded-circle shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; height: 60px">
-            <p class="fw-bold">PJSC Nikopol Ferroalloy Plant</p>
+            <img src="{% static 'images/clients/AMU.jpg' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; height: 100px">
+            <p class="fw-bold">ArcelorMittal</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/amk.png' %}"
-                 class="rounded-circle shadow mb-0 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; height: 80px">
-            <p class="fw-bold">Alchevsk Metallurgical Plant, PJSC</p>
+            <img src="{% static 'images/clients/Arm.jpg' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; height: 100px">
+            <p class="fw-bold">Арматура Украины</p>
+        </div>
+        <div class="col-6 col-xl-3 col-md-4 my-auto">
+            <img src="{% static 'images/clients/Inter.jpg' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; max-height: 100px">
+            <p class="fw-bold">Interext LLC</p>
+        </div>
+        <div class="col-6 col-xl-3 col-md-4 my-auto">
+            <img src="{% static 'images/clients/Lem.jpg' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; max-height: 100px">
+            <p class="fw-bold">Lemitrans</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/p9.png' %}"
-                 class="rounded shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; max-height: 80px">
-            <p class="fw-bold">Promarmatura, PJSC, Dnipro</p>
+            <img src="{% static 'images/clients/prom.jpg' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; max-height: 100px">
+            <p class="fw-bold">Promarmatura</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/p13.png' %}"
-                 class="rounded-circle shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; max-height: 60px">
-            <p class="fw-bold">Interext LLC, Kiev</p>
+            <img src="{% static 'images/clients/Днипро.png' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; max-height: 100px">
+            <p class="fw-bold">Днепровагонмаш</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/sn.png' %}"
-                 class="rounded-circle shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; max-height: 80px">
-            <p class="fw-bold">Sumy Plant "Nasosenergomash" PJSC</p>
+            <img src="{% static 'images/clients/Карпаты.png' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; max-height: 100px">
+            <p class="fw-bold ">KARPATY</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/yakz.png' %}"
-                 class="rounded shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; max-height: 80px">
-            <p class="fw-bold">Yasinovka Coke and Chemical Plant, PJSC</p>
+            <img src="{% static 'images/clients/Краков.png' %}"
+                 class="shadow mb-3" alt=""
+                 style="width: auto; max-height: 100px">
+            <p class="fw-bold ">Краковский Вагоностроительный Завод</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/zkg.png' %}"
-                 class="rounded shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; max-height: 60px">
-            <p class="fw-bold ">Housing and Utilities Sector Enterprises</p>
+            <img src="{% static 'images/clients/Пром.png' %}"
+                 class="shadow mb-3" alt=""
+                 style="max-height: 100px">
+            <p class="fw-bold">Promgroup</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/p7.png' %}"
-                 class="rounded shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: auto; max-height: 50px">
-            <p class="fw-bold ">Closed Joint-Stock Company "Belteplomashstroy", Minsk</p>
-        </div>
-        <div class="col-6 col-xl-3 col-md-4">
-            <img src="{% static 'images/clients/p8.png' %}"
-                 class="rounded shadow mb-3 px-3 py-1 bg-primary" alt=""
-                 style="width: 250px; max-height: auto">
-            <p class="fw-bold">Closed Joint-Stock Company "Clean Shore", Minsk</p>
+            <img src="{% static 'images/clients/ТГК.png' %}"
+                 class="shadow mb-3" alt=""
+                 style="max-height: 100px">
+            <p class="fw-bold">Горнотранспортная компания</p>
         </div>
     </div>
 </section>
