translation blocks for base/index

--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -159,7 +159,7 @@
                                     class="flag-russia flag"></i>Русский</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#"><i class="flag-ukraine flag"></i>Український</a>
+                            <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-ukraine flag"></i>Український</a>
                         </li>
                         <li>
                             <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-germany flag"></i>Deutsch</a>
@@ -223,8 +223,8 @@
 <!--г. Никополь, ул.Электрометаллургов, 300 – новая площадка (литейный цех)-->
 <section class="container my-5" id="contacts">
     <h2 class="fw-bold text-center my-5">
-        <u class="text-primary">Связаться</u>
-        <span>с нами</span>
+        <u class="text-primary">{% translate 'Связаться' %}</u>
+        <span>{% translate 'с нами' %}</span>
     </h2>
     <div class="card mb-3">
         <div class="row g-0 d-flex align-items-center">
@@ -235,13 +235,12 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col-lg-8">
-                <h3 class="text-center">ООО «М-ЛИТ»</h3>
-                <div class="text-center">53221, Украина, Днепропетровская обл., г. Никополь, ул. Электрометаллургов,
-                    300
+                <h3 class="text-center">{% translate 'ООО «М-ЛИТ»' %}</h3>
+                <div class="text-center">{% translate '53221, Украина, Днепропетровская обл., г. Никополь, ул. Электрометаллургов, 300' %}
                 </div>
                 <div class="card-body ps-5 pe-1 py-2">
                     <div class="row gx-lg-5">
-                        <h4 class="text-center my-3">Руководство</h4>
+                        <h4 class="text-center my-3">{% translate 'Руководство' %}</h4>
                         <div class="col-auto mb-5 mx-0 px-1">
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
@@ -250,9 +249,9 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <p class="fw-bold mb-1">Директор Завода</p>
-                                    <p class="text-muted mb-0">Попов Евгений Святославович</p>
-                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-78
+                                    <p class="fw-bold mb-1">{% translate 'Директор Завода' %}</p>
+                                    <p class="text-muted mb-0">{% translate 'Попов Евгений Святославович' %}</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">{% translate 'Тел.:' %}</span> +38 (0566) 68-45-78
                                     </p>
                                     <p class="text-muted mb-0 ms-5 ps-2"> (0566) 69-60-34</p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Email: </span> espgenie@gmail.com
@@ -265,9 +264,9 @@
                             <div class="d-flex align-items-start">
 
                                 <div class="flex-grow-1 mx-0">
-                                    <p class="fw-bold mb-1">Главный Инженер</p>
-                                    <p class="text-muted mb-0">Дольник Владимир Миколайович</p>
-                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 69-60-35
+                                    <p class="fw-bold mb-1">{% translate 'Главный Инженер' %}</p>
+                                    <p class="text-muted mb-0">{% translate 'Дольник Владимир Миколайович' %}</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">{% translate 'Тел.:' %}</span> +38 (0566) 69-60-35
                                     </p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Email: </span> olodymyr@gmail.com
                                     </p>
@@ -280,9 +279,9 @@
                             <div class="d-flex align-items-start">
 
                                 <div class="flex-grow-1 mx-0">
-                                    <p class="fw-bold mb-1">Начальник отдела технического контроля</p>
-                                    <p class="text-muted mb-0">Кочерга Ирина Николаевна</p>
-                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-83
+                                    <p class="fw-bold mb-1">{% translate 'Начальник отдела технического контроля' %}</p>
+                                    <p class="text-muted mb-0">{% translate 'Кочерга Ирина Николаевна' %}</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">{% translate 'Тел.:' %}</span> +38 (0566) 68-45-83
                                     </p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Email: </span>
                                         irinakocherga1963@gmail.com
@@ -292,7 +291,7 @@
                         </div>
                     </div>
 
-                    <h4 class="text-center mb-3">Отдел продаж</h4>
+                    <h4 class="text-center mb-3">{% translate 'Отдел продаж' %}</h4>
                     <div class="row gx-lg-5">
                         <div class="col-auto mb-5 mx-0 px-1">
                             <div class="d-flex align-items-start">
@@ -302,9 +301,9 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <p class="fw-bold mb-1">Заместитель директора по маркетингу и сбыту</p>
-                                    <p class="text-muted mb-0">Зырянова Елена Анатольевна</p>
-                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-82
+                                    <p class="fw-bold mb-1">{% translate 'Заместитель директора по маркетингу и сбыту' %}</p>
+                                    <p class="text-muted mb-0">{% translate 'Зырянова Елена Анатольевна' %}</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">{% translate 'Тел.:' %}</span> +38 (0566) 68-45-82
                                     </p>
                                     <p class="text-muted mb-0">+38(095) 787-07-97</p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Email: </span> m_lit@ukr.net
@@ -317,11 +316,11 @@
                             <div class="d-flex align-items-start">
 
                                 <div class="flex-grow-1 mx-0">
-                                    <p class="fw-bold mb-1">Начальник отдела продаж</p>
-                                    <p class="text-muted mb-0">Приладышева Татьяна Владимировна</p>
-                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (050) 450-16-50
+                                    <p class="fw-bold mb-1">{% translate 'Начальник отдела продаж' %}</p>
+                                    <p class="text-muted mb-0">{% translate 'Приладышева Татьяна Владимировна' %}</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">{% translate 'Тел.:' %}</span> +38 (050) 450-16-50
                                     </p>
-                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-81
+                                    <p class="text-muted mb-0"><span class="fw-bold">{% translate 'Тел.:' %}</span> +38 (0566) 68-45-81
                                     </p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Email: </span> mlit-sbut@ukr.net
                                     </p>
@@ -329,7 +328,7 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="text-center mb-3">Поставщикам</h4>
+                    <h4 class="text-center mb-3">{% translate 'Поставщикам' %}</h4>
                     <div class="row gx-lg-5">
                         <div class="col-auto mb-5 mx-0 px-1">
                             <div class="d-flex align-items-start">
@@ -339,9 +338,9 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3">
-                                    <p class="fw-bold mb-1">Заместитель директора по маркетингу и сбыту</p>
-                                    <p class="text-muted mb-0">Зырянова Елена Анатольевна</p>
-                                    <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 68-45-82
+                                    <p class="fw-bold mb-1">{% translate 'Заместитель директора по маркетингу и сбыту' %}</p>
+                                    <p class="text-muted mb-0">{% translate 'Зырянова Елена Анатольевна' %}</p>
+                                    <p class="text-muted mb-0"><span class="fw-bold">{% translate 'Тел.:' %}</span> +38 (0566) 68-45-82
                                     </p>
                                     <p class="text-muted mb-0">+38(095) 787-07-97</p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Email: </span> m_lit@ukr.net
@@ -362,7 +361,7 @@
         <div class="container py-1">
             <div class="row">
                 <div class="col-12 text-center text-white my-0 py-0">
-                    Copyright © 2014-2024 «M-LIT», Все права защищены
+                    {% translate 'Copyright © 2014-2024 «M-LIT», Все права защищены' %}
                 </div>
             </div>
         </div>
