--- a/content/templates/content/product_iron_casting.html
+++ b/content/templates/content/product_iron_casting.html
@@ -6,11 +6,11 @@
 
 <!--your title block here-->
 {% block title %}
-Чугунное литьё
+{% translate 'Чугунное литьё' %}
 {% endblock title %}
 <!--title end-->
 {% block description %}
-Люк лёгкий, люк средний, люк тяжелый, люк антивандальный, дождеприемник, решетка ливневая, скамейки
+{% translate 'Люк лёгкий, люк средний, люк тяжелый, люк антивандальный, дождеприемник, решетка ливневая, скамейки' %}
 {% endblock description %}
 
 
@@ -57,7 +57,7 @@
 
             <!--Content-->
             <div class="mb-3">
-                <span class="badge badge-danger mr-1">Литьё</span>
+                <span class="badge badge-danger mr-1">{% translate 'Литьё' %}</span>
             </div>
 
             <!-- Tabs navs -->
@@ -71,7 +71,7 @@
                             role="tab"
                             aria-controls="ex1-tabs-1"
                             aria-selected="true"
-                    >Люк Легкий/Средний/Тяжелый</a
+                    >{% translate 'Люк Легкий/Средний/Тяжелый' %}</a
                     >
                 </li>
             </ul>
@@ -88,30 +88,30 @@
                     <table class="table table-sm table-bordered text-center">
                         <thead>
                         <tr>
-                            <th scope="col">Наименование</th>
-                            <th scope="col">Диаметр мм.</th>
-                            <th scope="col">Высота мм.</th>
-                            <th scope="col">Корпус кг.</th>
-                            <th scope="col">Крышка кг.</th>
+                            <th scope="col">{% translate 'Наименование' %}</th>
+                            <th scope="col">{% translate 'Диаметр мм.' %}</th>
+                            <th scope="col">{% translate 'Высота мм.' %}</th>
+                            <th scope="col">{% translate 'Корпус кг.' %}</th>
+                            <th scope="col">{% translate 'Крышка кг.' %}</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Люк лёгкий</th>
+                            <th scope="row">{% translate 'Люк лёгкий' %}</th>
                             <td>770</td>
                             <td>90</td>
                             <td>37</td>
                             <td>30</td>
                         </tr>
                         <tr>
-                            <th scope="row">Люк Средний</th>
+                            <th scope="row">{% translate 'Люк Средний' %}</th>
                             <td>870</td>
                             <td>120</td>
                             <td>47</td>
                             <td>47</td>
                         </tr>
                         <tr>
-                            <th scope="row">Люк Тяжелый</th>
+                            <th scope="row">{% translate 'Люк Тяжелый' %}</th>
                             <td>870</td>
                             <td>120</td>
                             <td>58</td>
@@ -121,22 +121,22 @@
                     </table>
                 </div>
             </div>
-            <p class="my-0">Назначение: Люки чугунные для смотровых колодцев предназначены для установки на колодцах
-                сетей водопровода и канализации:</p>
+            <p class="my-0">{% blocktrans %}Назначение: Люки чугунные для смотровых колодцев предназначены для установки на колодцах
+                сетей водопровода и канализации:{% endblocktrans %}</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>в зоне зеленых насаждений, пешеходной зоне
-                (легкий люк) ЛЮКЛ (А15)-ВК-1-60</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% blocktrans %}в зоне зеленых насаждений, пешеходной зоне
+                (легкий люк) ЛЮКЛ (А15)-ВК-1-60{% endblocktrans %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>автостоянках, тротуарах и проезжей части
-                городских парков (средний люк) - ЛЮКС (В125)-ВК-1-60</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% blocktrans %}автостоянках, тротуарах и проезжей части
+                городских парков (средний люк) - ЛЮКС (В125)-ВК-1-60{% endblocktrans %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>на городских автомобильных дорогах с
-                интенсивным движением (тяжелый люк) - ЛЮКТ (С250)-ВК-1-60 ДСТУ Б.В. 2.5-26:2005(ГОСТ 3634-99</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% blocktrans %}на городских автомобильных дорогах с
+                интенсивным движением (тяжелый люк) - ЛЮКТ (С250)-ВК-1-60 ДСТУ Б.В. 2.5-26:2005(ГОСТ 3634-99{% endblocktrans %}</p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">Узнать цену
+                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">{% translate 'Узнать цену' %}
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -173,7 +173,7 @@
             <!-- Tabs navs -->
             <div class="mb-3">
                 <a href="#">
-                    <span class="badge badge-danger mr-1">Литье</span>
+                    <span class="badge badge-danger mr-1">{% translate 'Литье' %}</span>
                 </a>
             </div>
 
@@ -188,7 +188,7 @@
                             role="tab"
                             aria-controls="ex2-tabs-1"
                             aria-selected="true"
-                    >Люк антивандальный</a
+                    >{% translate 'Люк антивандальный' %}</a
                     >
                 </li>
             </ul>
@@ -205,17 +205,17 @@
                     <table class="table table-sm table-bordered text-center">
                         <thead>
                         <tr>
-                            <th scope="col">Наименование</th>
-                            <th scope="col">Длина мм.</th>
-                            <th scope="col">Ширина мм.</th>
-                            <th scope="col">Высота мм.</th>
-                            <th scope="col">Корпус кг.</th>
-                            <th scope="col">Крышка кг.</th>
+                            <th scope="col">{% translate 'Наименование' %}</th>
+                            <th scope="col">{% translate 'Длина мм.' %}</th>
+                            <th scope="col">{% translate 'Ширина мм.' %}</th>
+                            <th scope="col">{% translate 'Высота мм.' %}</th>
+                            <th scope="col">{% translate 'Корпус кг.' %}</th>
+                            <th scope="col">{% translate 'Крышка кг.' %}</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Люк антивандальный</th>
+                            <th scope="row">{% translate 'Люк антивандальный' %}</th>
                             <td>830</td>
                             <td>830</td>
                             <td>125</td>
@@ -229,14 +229,14 @@
             </div>
 
 
-            <p class="my-0">Назначение: Люки чугунные для смотровых колодцев с запорным устройством предназначены для
+            <p class="my-0">{% blocktrans %}Назначение: Люки чугунные для смотровых колодцев с запорным устройством предназначены для
                 установки на городских автомобильных дорогах с интенсивным движением - ЛЮК Т (С250)-ВК-6-64х64 ДСТУ Б В.
-                2,5-26:2005 (ГОСТ 3634-99). Нагрузка номинальная 250кН (25,0 тс)</p>
+                2,5-26:2005 (ГОСТ 3634-99). Нагрузка номинальная 250кН (25,0 тс){% endblocktrans %}</p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">Узнать цену
+                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">{% translate 'Узнать цену' %}
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -275,7 +275,7 @@
             <!-- Tabs navs -->
             <div class="mb-3">
                 <a href="#">
-                    <span class="badge badge-info mr-1">Литьё</span>
+                    <span class="badge badge-info mr-1">{% translate 'Литьё' %}</span>
                 </a>
             </div>
 
@@ -290,7 +290,7 @@
                             role="tab"
                             aria-controls="ex3-tabs-1"
                             aria-selected="true"
-                    >Дождеприемники</a
+                    >{% translate 'Дождеприемники' %}</a
                     >
                 </li>
 
@@ -308,18 +308,18 @@
                     <table class="table table-sm table-bordered text-center">
                         <thead>
                         <tr>
-                            <th scope="col">Наименование</th>
-                            <th scope="col">Масса кг.</th>
-                            <th scope="col">Длина мм.</th>
-                            <th scope="col">Ширина мм.</th>
-                            <th scope="col">Высота мм.</th>
-                            <th scope="col">Площадь живого сечения 0,28 м2</th>
-                            <th scope="col">Площадь пазов %</th>
+                            <th scope="col">{% translate 'Наименование' %}</th>
+                            <th scope="col">{% translate 'Масса кг.' %}</th>
+                            <th scope="col">{% translate 'Длина мм.' %}</th>
+                            <th scope="col">{% translate 'Ширина мм.' %}</th>
+                            <th scope="col">{% translate 'Высота мм.' %}</th>
+                            <th scope="col">{% translate 'Площадь живого сечения 0,28 м2' %}</th>
+                            <th scope="col">{% translate 'Площадь пазов %' %}</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Дождеприемник</th>
+                            <th scope="row">{% translate 'Дождеприемник' %}</th>
                             <td>119</td>
                             <td>915</td>
                             <td>570</td>
@@ -328,7 +328,7 @@
                             <td>50</td>
                         </tr>
                         <tr>
-                            <th scope="row">Ливневка</th>
+                            <th scope="row">{% translate 'Ливневка' %}</th>
                             <td>95</td>
                             <td>740</td>
                             <td>400</td>
@@ -340,15 +340,15 @@
                     </table>
                 </div>
             </div>
-            <p class="my-0">Назначение: дождеприемники и ливневки колодцев предназначены для приема поверхностных
+            <p class="my-0">{% blocktrans %}Назначение: дождеприемники и ливневки колодцев предназначены для приема поверхностных
                 сточных вод с улиц, дворов и других территорий. Дождеприемники устанавливаются на автостоянках и
-                проезжей части городских дорог.
+                проезжей части городских дорог.{% endblocktrans %}
             </p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">Узнать цену
+                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">{% translate 'Узнать цену' %}
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -385,7 +385,7 @@
             <!-- Tabs navs -->
             <div class="mb-3">
                 <a href="#">
-                    <span class="badge badge-info mr-1">Литьё</span>
+                    <span class="badge badge-info mr-1">{% translate 'Литьё' %}</span>
                 </a>
             </div>
 
@@ -400,7 +400,7 @@
                             role="tab"
                             aria-controls="ex3-tabs-1"
                             aria-selected="true"
-                    >Скамейки</a
+                    >{% translate 'Скамейки' %}</a
                     >
                 </li>
 
@@ -418,17 +418,17 @@
                     <table class="table table-sm table-bordered text-center">
                         <thead>
                         <tr>
-                            <th scope="col">Наименование</th>
-                            <th scope="col">Длина мм.</th>
-                            <th scope="col">Ширина мм.</th>
-                            <th scope="col">Высота со спинкой мм.</th>
-                            <th scope="col">Масса</th>
-                            <th scope="col">Масса ножки</th>
+                            <th scope="col">{% translate 'Наименование' %}</th>
+                            <th scope="col">{% translate 'Длина мм.' %}</th>
+                            <th scope="col">{% translate 'Ширина мм.' %}</th>
+                            <th scope="col">{% translate 'Высота со спинкой мм.' %}</th>
+                            <th scope="col">{% translate 'Масса' %}</th>
+                            <th scope="col">{% translate 'Масса ножки' %}</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Скамейка парковая</th>
+                            <th scope="row">{% translate 'Скамейка парковая' %}</th>
                             <td>1750</td>
                             <td>550</td>
                             <td>800</td>
@@ -439,15 +439,15 @@
                     </table>
                 </div>
             </div>
-            <p class="my-0">Назначение: скамейки парковые, состоящие из двух ножек, изготовленные литьем из чугуна СЧ 18
+            <p class="my-0">{% blocktrans %}Назначение: скамейки парковые, состоящие из двух ножек, изготовленные литьем из чугуна СЧ 18
                 с устройством сидения и спинки из дерева. Скамейки предназначены для оборудования мест отдыха на дачных
-                участках, в карках, детских и школьных площадках, остановок транспортных средств и др.
+                участках, в карках, детских и школьных площадках, остановок транспортных средств и др.{% endblocktrans %}
             </p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">Узнать цену
+                    <button class="btn btn-danger btn-md my-0 p btn-animate" type="button">{% translate 'Узнать цену' %}
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -466,7 +466,7 @@
         <!--Grid column-->
         <div class="col-md-6 text-center">
 
-            <h4 class="my-4 h2 fw-bold">Другие <u class="text-danger">изделия</u></h4>
+            <h4 class="my-4 h2 fw-bold">{% translate 'Другие' %} <u class="text-danger">{% translate 'изделия' %}</u></h4>
 
         </div>
         <!--Grid column-->
@@ -497,7 +497,7 @@
                  class="btn-animate mx-3 my-3" alt="" style="max-height: 150px; max-width: 150px;">
         </div>
         <a href="badges&Pads">
-            <button data-aos="fade-up" class="btn btn-success btn-animate">Подробнее</button>
+            <button data-aos="fade-up" class="btn btn-success btn-animate">{% translate 'Подробнее' %}</button>
         </a>
     </div>
         <!--Grid column-->
@@ -519,7 +519,7 @@
                      class="mt-3 btn-animate" alt="">
             </div>
             <a href="piping">
-                <button data-aos="fade-up" class="btn btn-primary btn-animate">Подробнее</button>
+                <button data-aos="fade-up" class="btn btn-primary btn-animate">{% translate 'Подробнее' %}</button>
             </a>
         </div>
         <!--Grid column-->
