--- a/content/templates/content/product_rw.html
+++ b/content/templates/content/product_rw.html
@@ -6,11 +6,11 @@
 
 <!--your title block here-->
 {% block title %}
-Железнодорожная продукция
+{% translate 'Железнодорожная продукция' %}
 {% endblock title %}
 <!--title end-->
 {% block description %}
-Клин фрикционный, тормозные колодки типа М, С, Ф, анкера закладные
+{% translate 'Клин фрикционный, тормозные колодки типа М, С, Ф, анкера закладные' %}
 {% endblock description %}
 
 <!--HEADER -> BASE.HTML-->
@@ -59,7 +59,7 @@
 
         <!--Grid column-->
         <div class="col-md-8">
-<h2 class="my-0">Клины
+<h2 class="my-0">{% translate 'Клины' %}
             <span>
                 <a
                         tabindex="0"
@@ -67,8 +67,8 @@
                         role="button"
                         data-mdb-toggle="popover"
                         data-mdb-trigger="focus"
-                        title="Назначение и область применения:"
-                        data-mdb-content="Клины являются составной частью клинового гасителя колебаний тележки грузового вагона и обеспечивают гашение колебаний вагона"
+                        title="{% translate 'Назначение и область применения:' %}"
+                        data-mdb-content="{% translate 'Клины являются составной частью клинового гасителя колебаний тележки грузового вагона и обеспечивают гашение колебаний вагона' %}"
                 ><i class="fa fa-circle-question fa-2x text-success"></i>
                 </a>
             </span>
@@ -76,10 +76,10 @@
             <!--Content-->
             <div class="mb-3">
                 <a href="#">
-                    <span class="badge badge-success mr-1">Ж/Д</span>
+                    <span class="badge badge-success mr-1">{% translate 'Ж/Д' %}</span>
                 </a>
                 <a href="#">
-                    <span class="badge badge-danger mr-1">Общего назначения</span>
+                    <span class="badge badge-danger mr-1">{% translate 'Общего назначения' %}</span>
                 </a>
             </div>
 
@@ -94,7 +94,7 @@
                             role="tab"
                             aria-controls="ex1-tabs-1"
                             aria-selected="true"
-                    >Клин фрикционный</a
+                    >{% translate 'Клин фрикционный' %}</a
                     >
                 </li>
             </ul>
@@ -120,7 +120,7 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Клин фрикционный</th>
+                            <th scope="row">{% translate 'Клин фрикционный' %}</th>
                             <td>15.8</td>
                             <td>212</td>
                             <td>186</td>
@@ -130,24 +130,24 @@
                     </table>
                 </div>
             </div>
-            <p class="my-0">Клин фрикционный изготавливается методом литья из серого чугуна марки СЧ350 ДСТУ 8833:2019 «Отливка из
+            <p class="my-0">{% blocktrans %}Клин фрикционный изготавливается методом литья из серого чугуна марки СЧ350 ДСТУ 8833:2019 «Отливка из
                 серого чугуна с пластинчатым графитом. Общие технические условия», имеет полый корпус. При
-                производстве не требуется термическая или механическая обработка. </p>
-            <p class="my-3">Комплект включает:</p>
+                производстве не требуется термическая или механическая обработка.{% endblocktrans %} </p>
+            <p class="my-3">{% translate 'Комплект включает:' %}</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Клин фрикционный</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Клин фрикционный' %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Паспорт - на отгрузочную партию
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Паспорт - на отгрузочную партию' %}
             </p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат качества</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Сертификат качества' %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат соответствия</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Сертификат соответствия' %}</p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Узнать цену
+                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">{% translate 'Узнать цену' %}
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -190,7 +190,7 @@
         <!--Grid column-->
         <div class="col-md-8 mb-4">
             <!--Content-->
-            <h2 class="my-0">Тормозные колодки
+            <h2 class="my-0">{% translate 'Тормозные колодки' %}
             <span>
                 <a
                         tabindex="0"
@@ -198,8 +198,8 @@
                         role="button"
                         data-mdb-toggle="popover"
                         data-mdb-trigger="focus"
-                        title="Назначение и область применения:"
-                        data-mdb-content="Колодки предназначены для железнодорожного подвижного состава как съемный элемент тормозной системы, рабочая поверхность которого вступает в контакт с поверхностью катания колеса"
+                        title="{% translate 'Назначение и область применения:' %}"
+                        data-mdb-content="{% translate 'Колодки предназначены для железнодорожного подвижного состава как съемный элемент тормозной системы, рабочая поверхность которого вступает в контакт с поверхностью катания колеса' %}"
                 ><i class="fa fa-circle-question fa-2x text-success"></i>
                 </a>
             </span>
@@ -208,10 +208,10 @@
             <div class="mb-3">
 
                 <a href="#">
-                    <span class="badge badge-success mr-1">Ж/Д</span>
+                    <span class="badge badge-success mr-1">{% translate 'Ж/Д' %}</span>
                 </a>
                 <a href="#">
-                    <span class="badge badge-danger mr-1">Общего назначения</span>
+                    <span class="badge badge-danger mr-1">{% translate 'Общего назначения' %}</span>
                 </a>
             </div>
 
@@ -226,7 +226,7 @@
                             role="tab"
                             aria-controls="ex2-tabs-1"
                             aria-selected="true"
-                    >Тип М</a
+                    >{% translate 'Тип М' %}</a
                     >
                 </li>
 
@@ -239,7 +239,7 @@
                             role="tab"
                             aria-controls="ex2-tabs-2"
                             aria-selected="true"
-                    >Тип C</a
+                    >{% translate 'Тип C' %}</a
                     >
                 </li>
 
@@ -252,7 +252,7 @@
                             role="tab"
                             aria-controls="ex2-tabs-3"
                             aria-selected="true"
-                    >Тип Ф</a
+                    >{% translate 'Тип Ф' %}</a
                     >
                 </li>
             </ul>
@@ -278,7 +278,7 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Тормозная колодка типа «М»</th>
+                            <th scope="row">{% translate 'Тормозная колодка типа «М»' %}</th>
                             <td>14.7</td>
                             <td>340</td>
                             <td>158.5</td>
@@ -286,7 +286,7 @@
                         </tr>
                         </tbody>
                     </table>
-                    <p>Каркас (спинка) и скоба колодки изготавливаются из полос. Спинка колодки должна быть залита в уровень с поверхности колодки, сопрягаемой с башмаком и должна быть видна</p>
+                    <p>{% translate 'Каркас (спинка) и скоба колодки изготавливаются из полос. Спинка колодки должна быть залита в уровень с поверхности колодки, сопрягаемой с башмаком и должна быть видна' %}</p>
                 </div>
 
                 <div
@@ -307,7 +307,7 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Тормозная колодка типа «Ф»</th>
+                            <th scope="row">{% translate 'Тормозная колодка типа «Ф»' %}</th>
                             <td>14.6</td>
                             <td>408</td>
                             <td>80</td>
@@ -315,7 +315,7 @@
                         </tr>
                         </tbody>
                     </table>
-<p>Колодки изготавливаются методом литься из чугуна, химический состав которого должен соответствовать нормам, указанным в чертеже ЛК 175-00М. Колодка должна иметь стальной каркас, который должен быть залит в уровень с поврехностью колодки и должен быть виден</p>
+<p>{% translate 'Колодки изготавливаются методом литься из чугуна, химический состав которого должен соответствовать нормам, указанным в чертеже ЛК 175-00М. Колодка должна иметь стальной каркас, который должен быть залит в уровень с поврехностью колодки и должен быть виден' %}</p>
                 </div>
 
                 <div
@@ -336,7 +336,7 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Тормозная колодка типа «C»</th>
+                            <th scope="row">{% translate 'Тормозная колодка типа «C»' %}</th>
                             <td>14.8</td>
                             <td>408</td>
                             <td>80</td>
@@ -344,27 +344,27 @@
                         </tr>
                         </tbody>
                     </table>
-                    <p>Колодки изготавливаются методом литья из чугуна, химический состав которого должен соотвутствовать нормам, указанным в ТУ У 30.2-39195133-006:2023. Колодка должна иметь стальной каркас, который должен быть залит в уровень с поверхностью колодки и должен быть виден между ушком и направляющими</p>
+                    <p>{% translate 'Колодки изготавливаются методом литья из чугуна, химический состав которого должен соотвутствовать нормам, указанным в ТУ У 30.2-39195133-006:2023. Колодка должна иметь стальной каркас, который должен быть залит в уровень с поверхностью колодки и должен быть виден между ушком и направляющими' %}</p>
                 </div>
 
             </div>
 
 
-            <p class="my-3">Комплект включает:</p>
+            <p class="my-3">{% translate 'Комплект включает:' %}</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Тормозная колодка</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Тормозная колодка' %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Паспорт - на отгрузочную партию колодок
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Паспорт - на отгрузочную партию колодок' %}
             </p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат качества</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Сертификат качества' %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат соответствия</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Сертификат соответствия' %}</p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Узнать цену
+                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">{% translate 'Узнать цену' %}
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -404,7 +404,7 @@
         <!--Grid column-->
         <div class="col-md-8 mb-4">
             <!--Content-->
-            <h2 class="my-0">Анкера закладные
+            <h2 class="my-0">{% translate 'Анкера закладные' %}
             <span>
                 <a
                         tabindex="0"
@@ -412,8 +412,8 @@
                         role="button"
                         data-mdb-toggle="popover"
                         data-mdb-trigger="focus"
-                        title="Назначение и область применения:"
-                        data-mdb-content="Анкеры закладные предназначены для упругих путевых скреплений"
+                        title="{% translate 'Назначение и область применения:' %}"
+                        data-mdb-content="{% translate 'Анкеры закладные предназначены для упругих путевых скреплений' %}"
                 ><i class="fa fa-circle-question fa-2x text-success"></i>
                 </a>
             </span>
@@ -421,10 +421,10 @@
             <!-- Tabs navs -->
             <div class="mb-3">
                 <a href="#">
-                    <span class="badge badge-success mr-1">Ж\Д</span>
+                    <span class="badge badge-success mr-1">{% translate 'Ж\Д' %}</span>
                 </a>
                 <a href="#">
-                    <span class="badge badge-danger mr-1">Общего назначения</span>
+                    <span class="badge badge-danger mr-1">{% translate 'Общего назначения' %}</span>
                 </a>
             </div>
 
@@ -465,7 +465,7 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <th scope="row">Анкер A3-1-6</th>
+                            <th scope="row">{% translate 'Анкер A3-1-6' %}</th>
                             <td>1,3</td>
                             <td>185</td>
                             <td>88</td>
@@ -475,23 +475,23 @@
                     </table>
                 </div>
             </div>
-            <p class="my-0">Конструктивной особенностью анкеров является то, что они замоноличуються в железнобетонные шпалы
+            <p class="my-0">{% translate 'Конструктивной особенностью анкеров является то, что они замоноличуються в железнобетонные шпалы' %}
             </p>
-            <p class="my-3">К комплект входит</p>
+            <p class="my-3">{% translate 'К комплект входит' %}</p>
             <p class="mt-3 mb-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Анкер закладной</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Анкер закладной' %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Паспорт - на отгрузочную партию колодок
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Паспорт - на отгрузочную партию колодок' %}
             </p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат качества</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Сертификат качества' %}</p>
             <p class="my-1 mt-1 ms-3"><i
-                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>Сертификат соответствия</p>
+                    class="fas fa-circle-dot fa-xs me-2 text-primary"></i>{% translate 'Сертификат соответствия' %}</p>
 
             <div class="d-flex justify-content-center">
                 <a data-aos="fade-up" class="" href="#">
                     <!-- Default input -->
-                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">Узнать цену
+                    <button class="btn btn-success btn-md my-0 p btn-animate" type="button">{% translate 'Узнать цену' %}
                         <i class="fas fa-shopping-cart ml-1"></i>
                     </button>
                 </a>
@@ -513,7 +513,7 @@
         <!--Grid column-->
         <div class="col-md-6 text-center">
 
-            <h4 class="my-4 h2 fw-bold">Другие <u class="text-success">изделия</u></h4>
+            <h4 class="my-4 h2 fw-bold">{% translate 'Другие' %} <u class="text-success">{% translate 'изделия' %}</u></h4>
 
         </div>
         <!--Grid column-->
@@ -545,7 +545,7 @@
                      class="mt-3 btn-animate" alt="">
             </div>
             <a href="piping">
-                <button data-aos="fade-up" class="btn btn-primary btn-animate">Подробнее</button>
+                <button data-aos="fade-up" class="btn btn-primary btn-animate">{% translate 'Подробнее' %}</button>
             </a>
         </div>
         <!--Grid column-->
@@ -568,7 +568,7 @@
                      style="max-height: 120px">
             </div>
             <a href="iron_casting">
-                <button data-aos="fade-up" class="btn btn-danger btn-animate">Подробнее</button>
+                <button data-aos="fade-up" class="btn btn-danger btn-animate">{% translate 'Подробнее' %}</button>
             </a>
         </div>
         <!--Grid column-->
