--- a/content/templates/content/base.html
+++ b/content/templates/content/base.html
@@ -266,7 +266,7 @@
 
                                 <div class="flex-grow-1 mx-0">
                                     <p class="fw-bold mb-1">Главный Инженер</p>
-                                    <p class="text-muted mb-0">Дольник Владимир Миколайович</p>
+                                    <p class="text-muted mb-0">Дольник Владимир Николайович</p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Тел.:</span> +38 (0566) 69-60-35
                                     </p>
                                     <p class="text-muted mb-0"><span class="fw-bold">Email: </span> olodymyr@gmail.com
