--- a/content/templates/content/index.html
+++ b/content/templates/content/index.html
@@ -509,7 +509,7 @@
             <img src="{% static 'images/clients/Lem.jpg' %}"
                  class="shadow mb-3" alt=""
                  style="width: auto; max-height: 100px">
-            <p class="fw-bold">Lemitrans</p>
+            <p class="fw-bold">Лемтранс</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
             <img src="{% static 'images/clients/prom.jpg' %}"
@@ -533,7 +533,7 @@
             <img src="{% static 'images/clients/Краков.png' %}"
                  class="shadow mb-3" alt=""
                  style="width: auto; max-height: 100px">
-            <p class="fw-bold ">Краковский Вагоностроительный Завод</p>
+            <p class="fw-bold ">Крюковский Вагоностроительный Завод</p>
         </div>
         <div class="col-6 col-xl-3 col-md-4">
             <img src="{% static 'images/clients/Пром.png' %}"
