--- a/content/templates/content/base-en.html
+++ b/content/templates/content/base-en.html
@@ -159,7 +159,8 @@
                                     class="flag-russia flag"></i>Русский</a>
                         </li>
                         <li>
-                            <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-ukraine flag"></i>Український</a>
+                            <a class="dropdown-item " href="{% url 'index:set_language' 'uk' %}"><i
+                                    class="flag-ukraine flag"></i>Український</a>
                         </li>
                         <li>
                             <a class="dropdown-item bg-secondary text-muted" href="#"><i class="flag-germany flag"></i>Deutsch</a>
